[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsstore-tree"
version = "1.0.0"
description = "dsstore-tree is a tool to recursively discover files and directories on web servers by parsing exposed .DS_Store files (macOS metadata files)."
authors = [{name = "vflame6", email = "vflame6x@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.4",
    "ds-store>=1.3.0",
]

[project.scripts]
dsstore-tree = "dsstore_tree:main"
